Commit 20-05-25, adding Sign In page

--- a/header_footer/header.html
+++ b/header_footer/header.html
@@ -1,11 +1,11 @@
 <header>
     <button onclick="menuSide()" id="naps" style="border: none;"><img id="menu" src="/header_footer/ChatGPT Image May 13, 2025, 12_20_06 AM.png" alt="menu"></button>
     <a href="\"><img src="/header_footer/ChatGPT Image May 12, 2025, 07_00_42 PM.png" alt="logo" id="logo"></a>
-    <a href="/sign_in" id="signIn">Sign In</a>
+    <a href="/SignIn" id="signIn">Sign In</a>
 </header>
 <div id="menuSide" class="hideMenu">
     <ul style="list-style-type: none;padding-left: 0;margin: 0;">
-        <a href="#" class="nav_links">
+        <a href="/" class="nav_links">
             <li class="Home"><img src="/header_footer/ChatGPT Image May 19, 2025, 03_46_29 PM.png" alt="">  Home Page</li>
         </a>
         <a href="#" class="nav_links">
