commit 22-05-25, sign up page styling.

--- a/html_css_js_files/SignIn.html
+++ b/html_css_js_files/SignIn.html
@@ -1,16 +1,13 @@
 <div id="pageContent">
 <div class="SignInBox">
-    <img style="width: 12vw;min-width: 140px;" src="/GloBall/header_footer/ChatGPT Image May 12, 2025, 07_00_42 PM.png" alt="logo">
+    <img style="width: 12vw;min-width: 140px;" src="/html_css_js_files/ChatGPT Image May 22, 2025, 01_04_51 AM.png"" alt="logo">
     <h2>Sign In</h2>
-    <br><br>
     <form action="/SignInForm">
-        <label for="username"><b>Username:</b></label><br>
-        <input type="text" id="username" name="username" required >
+        <input type="text" id="username" name="username" placeholder="Username" required title="">
         <br><br>
-        <label for="password"><b>Password:</b></label><br>
-        <input type="password" id="password" name="password" required >
-        <br><br>
-        <input type="submit" value="Login">
+        <input type="password" id="password" name="password" placeholder="Password"required title="">
+        <br><br><br>
+        <input id="signinbutton" type="submit" value="Sign In">
     </form>
     <br>
     <br>
@@ -19,3 +16,4 @@
     <a href="/ForgotUP">Forget username or password? ></a>
 </div>
 </div>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400&display=swap" rel="stylesheet">
